# layered-queue-driver

./: .gitignore  BLDC_USAGE.md  CMakeLists.txt  Kconfig  PROJECT_SUMMARY.md  README.md  ZEPHYR_INTEGRATION.md  run_gpio_test.sh  west.yml
--dry-run/: lq_generated.h
.github/workflows/: coverage-badge.yml  test.yml
arduino/: BUILD_NOTES.md  GETTING_STARTED.md  README.md  keywords.txt  library.properties  test_compile.sh
arduino/examples/BasicBLDC/: BasicBLDC.ino
arduino/examples/CANopen_SDO/: CANopen_SDO.ino
arduino/examples/Complete_System/: Complete_System.ino
arduino/examples/Diagnostics_DTC/: Diagnostics_DTC.ino
arduino/examples/ESP32_BLDC_Simple/: ESP32_BLDC_Simple.ino
arduino/examples/Engine_Basics/: Engine_Basics.ino
arduino/examples/Engine_MultiDriver/: Engine_MultiDriver.ino
arduino/examples/J1939_Engine/: J1939_Engine.ino
arduino/examples/PID_SpeedControl/: PID_SpeedControl.ino
arduino/examples/SAMD51_Dual_Motor/: SAMD51_Dual_Motor.ino
arduino/examples/SAMD_BLDC_Simple/: SAMD_BLDC_Simple.ino
arduino/examples/SignalProcessing/: SignalProcessing.ino
arduino/examples/SimplePID/: SimplePID.ino
arduino/examples/SimpleScale/: SimpleScale.ino
arduino/src/: LayeredQueue.h  LayeredQueue_BLDC.cpp  LayeredQueue_BLDC.h  LayeredQueue_Drivers.cpp  lq_bldc.c  lq_bldc.h  lq_platform.h  lq_platform_arduino.cpp  lq_platform_esp32.c  lq_platform_samd.c  lq_platform_stm32.c  platform_impl.cpp  platform_includes.h
cmake/: GenerateComprehensiveCoverage.cmake  GenerateCoverage.cmake  LayeredQueueApp.cmake  RequirementsDriven.cmake
docs/: CAN_QUICKSTART.md  CI_HIL_SETUP.md  HIL_OUTPUT_TESTING.md  HIL_PLATFORM.md  HIL_TESTING.md  PLATFORM_ABSTRACTION.md  PLATFORM_IMPLEMENTATIONS.md  architecture.md  automatic-memory-optimization.md  bldc-motor-driver.md  can-j1939-guide.md  canopen-eds-integration.md  clean-architecture.md  configuration-framework.md  devicetree-guide.md  dtc-diagnostics.md  dts-api-migration.md  dts-quick-reference.md  dual-channel-safety.md  fault-monitoring.md  freertos-integration.md  github-coverage.md  layered-architecture-guide.md  output-types-reference.md  peripheral-initialization.md  platform-adaptors.md  platform-portability.md  platform-quick-reference.md  protocol-drivers.md  safety-concept-wake-functions.md  test-coverage.md  testing-sockets-in-c.md  testing.md  west-integration-example.yml  zephyr-integration-complete.md
drivers/: CMakeLists.txt
drivers/layered_queue/: CMakeLists.txt  Kconfig  lq_adc_source.c  lq_merge_voter.c  lq_platform_can_zephyr.c  lq_protocol_canopen.c  lq_protocol_j1939.c  lq_queue.c  lq_spi_source.c  lq_util.c
dts/bindings/layered-queue/: lq,config-framework.yaml  lq,cyclic-output.yaml  lq,engine.yaml  lq,hw-adc-input.yaml  lq,hw-sensor-input.yaml  lq,hw-spi-input.yaml  lq,input.yaml  lq,mid-merge.yaml  lq,output.yaml  lq,protocol-canopen.yaml  lq,protocol-isotp.yaml  lq,protocol-j1939.yaml  lq,protocol-uds.yaml  lq-fault-monitor.yaml  lq-gpio-pattern.yaml  lq-limp-home.yaml  lq-pid.yaml  (+8 more)
dts/examples/: automotive-brake-example.dts  dual-protocol-system.dts  layered-architecture-example.dts  layered-queue-example.dts  uds-config-example.dts
include/: layered_queue_core.h  lq_bldc.h  lq_canopen.h  lq_common.h  lq_config.h  lq_config_avr.h  lq_dtc.h  lq_engine.h  lq_event.h  lq_event_crosscheck.h  lq_gpio_pattern.h  lq_hil.h  lq_hil_platform.h  lq_hil_transport.h  lq_hw_input.h  lq_isotp.h  lq_j1939.h  lq_limp_home.h  lq_log.h  lq_mid_driver.h  lq_pid.h  lq_platform.h  lq_protocol.h  lq_remap.h  lq_scale.h  lq_spi_source.h  lq_sync_group.h  lq_uds.h  lq_uds_can.h  lq_util.h  lq_verified_output.h
samples/: README.md  config_example.c  fault-monitor-example.dts  fault_handlers_example.c  joystick-control-example.dts  limp-home-example.dts  multi-level-fault-example.dts  multi-level-fault-handlers.c  multi-output-example.dts  temperature-control-example.dts
samples/automotive/: CMakeLists.txt  README.md  README_clean.md  app.dts  app_sensors.dts
samples/basic/: CMakeLists.txt  README.md  gpio_threshold_test.dts
samples/canopen/: CMakeLists.txt  README.md  bldc_system.dts  example_motor.eds  motor.dts  motor_system.dts
samples/esp32/: bldc-motor-example.dts  bldc_motor_example.c
samples/freertos/: README.md  main.c
samples/j1939/: automotive_can_system.dts
samples/safety/: dual-channel-example.dts  safe_state_handler.c
samples/samd/: README.md  bldc-motor-example.dts  bldc_motor_example.c
samples/stm32/: bldc-motor-example.dts  bldc_motor_example.c  brake_system_stm32.dts
scripts/: README_REQGEN.md  bootstrap_zephyr_project.py  build_firmware.sh  canopen_eds_parser.py  conflict_handler.py  dts_gen.py  generate_comprehensive_hil_tests.py  generate_coverage.sh  hil_test_gen.py  platform_adaptors.py  reqgen.py  west_build_with_prjconf.sh
src/: lq_canopen.c  lq_engine.c  lq_event_crosscheck.c  lq_hil.c  lq_j1939.c  lq_limp_home.c  lq_pid.c  lq_remap.c  lq_spi_source.c  lq_util.c
src/drivers/: lq_bldc.c  lq_canopen.c  lq_config.c  lq_dtc.c  lq_engine.c  lq_gpio_pattern.c  lq_hil.c  lq_hil_platform.c  lq_hw_input.c  lq_isotp.c  lq_j1939.c  lq_pid.c  lq_queue_core.c  lq_scale.c  lq_spi_source.c  lq_uds.c  lq_uds_can.c  lq_util.c  lq_verified_output.c
src/platform/: lq_platform_avr.c  lq_platform_can_zephyr.c  lq_platform_esp32.c  lq_platform_freertos.c  lq_platform_gpio_zephyr.c  lq_platform_hil.c  lq_platform_i2c_zephyr.c  lq_platform_native.c  lq_platform_pwm_zephyr.c  lq_platform_samd.c  lq_platform_spi_zephyr.c  lq_platform_stm32.c  lq_platform_stubs.c  lq_platform_uart_zephyr.c  lq_platform_zephyr.c
tests/: bldc_test.cpp  canopen_test.cpp  config_test.cpp  driver_test.cpp  dtc_test.cpp  engine_test.cpp  gpio_pattern_test.cpp  hil_platform_test.cpp  hil_test.cpp  hw_input_test.cpp  isotp_test.cpp  j1939_test.cpp  queue_test.cpp  uds_test.cpp
tests/hil/: ci_hil_runner.sh  real_sut.c  rpm_voting_test.dts  run_hil_cmake.sh  run_hil_tests.sh  simple_sut  simple_sut.c  test_runner  test_runner.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/include/: lq_devicetree.h
(+16 files in other folders)
